Finishing the backend
:) chbapter 1 complut
